feat(user profile): user profile settings
